--- a/templates/item/Custom Armour-sheet.html
+++ b/templates/item/Custom Armour-sheet.html
@@ -33,13 +33,13 @@
                 </div>
                 <div id="value" class="equipmentStatLong">
                     <label class="resource-label">Value:</label>
-                    <label class="resource-label">{{data.data.cost}}$</label>
-                    <label class="resource-label"> / {{data.data.ttlCost}}$ total</label>
+                    <label class="resource-label">{{round data.data.cost 100}}$</label>
+                    <label class="resource-label"> / {{round data.data.ttlCost 100}}$ total</label>
                 </div>
                 <div id="weight" class="equipmentStatLong">
                     <label class="resource-label">Weight:</label>
-                    <label class="resource-label">{{data.data.weight}}lbs</label>
-                    <label class="resource-label"> / {{data.data.ttlWeight}}lbs total</label>
+                    <label class="resource-label">{{round data.data.weight 100}}lbs</label>
+                    <label class="resource-label"> / {{round data.data.ttlWeight 100}}lbs total</label>
                 </div>
             </div>
         </div>
