--- a/templates/item/Custom Armour-sheet.html
+++ b/templates/item/Custom Armour-sheet.html
@@ -510,8 +510,13 @@
                 {{#unless (eq data.data.armour.bodyType.name "") }}
                 <div>
                     <div>
-                        <h2 class="bold" style="text-align: center;">What The Fuck Is This Shit?</h2>
-                        <div class="equipment-info-container">{{{data.data.info}}}</div>
+                        <div>
+                            <h2 class="bold" style="text-align: center;">What The Fuck Is This Shit?</h2>
+                            <div class="equipment-info-container">{{{data.data.info}}}</div>
+                        </div>
+                        <div>
+                            <a class="saveItem">Save</a>
+                        </div>
                     </div>
                     <table>
                         <tr class="hit-locations">
