#55 Added Status Equivilent to custom armour

--- a/templates/item/Custom Armour-sheet.html
+++ b/templates/item/Custom Armour-sheet.html
@@ -822,6 +822,17 @@
                             </div>
                         </td>
                     </tr>
+                    <tr class="design-row">
+                        <td>Status Equivilent:</td>
+                        <td>
+                            {{data.data.armourDesign.statusEq}}
+                        </td>
+                        <td class="question-container" id="armour-status-eq">
+                            <div class="question-button">
+                                <i class="fas fa-question"></i>
+                            </div>
+                        </td>
+                    </tr>
                 </table>
             </div>
         </div>
